# SDL2test

./: .clang-tidy  CMakeLists.txt  README.md
src/: main.cpp
